<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eSeverity" Id="{0a1b3bf9-9c88-4dfa-9693-ad35466c57a4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'to_string'}
TYPE eSeverity :
(
	EmergencyShutdown			:= 0, //ONLY CALL FROM SAFETY PROGRAM
	QuickShutdown				:= 1,			
	NormalShutdown				:= 2,
	Warning 					:= 3,
	Info						:= 4
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>